--- a/MyPortfolio_dot.install/style.css
+++ b/MyPortfolio_dot.install/style.css
@@ -2,8 +2,25 @@
 
 body {
   background-color: pink;
+  margin: 0;
 }
 
-.profile.img{
+header{
+  text-align: center;
+  background-color: #eee;
+  padding: 32px 0;
+}
+.profilePicture img{
   border-radius: 50%;
+  
+}
+
+h1{
+  font-weight: normal;
+  font-size: 24px;
+  margin:16px 0 0;
+}
+
+p{
+  margin: 0;
 }
