--- a/MyPortfolio_dot.install/style.css
+++ b/MyPortfolio_dot.install/style.css
@@ -21,6 +21,37 @@ h1{
   margin:16px 0 0;
 }
 
+h2{
+  font-weight: normal;
+  margin: 0;
+  font-size: 24px;
+}
+
+h3{
+  font-weight: normal;
+  margin: 0;
+  font: size 20px;
+}
+
 p{
   margin: 0;
+}
+
+main{
+  text-align: center;
+  background-color: #fff;
+  padding: 64px 0;
+  width: 400px;
+  margin:auto;
+}
+
+
+main img{
+  width: 400px;
+  height: 240px;
+  margin:64px 0 0;
+}
+
+main .main_text{
+  text-align: left;
 }
