--- a/MyPortfolio_dot.install/style.css
+++ b/MyPortfolio_dot.install/style.css
@@ -30,7 +30,8 @@ h2{
 h3{
   font-weight: normal;
   margin: 0;
-  font: size 20px;
+  font-size: 20px;
+  margin: 16px 0;
 }
 
 p{
@@ -54,4 +55,28 @@ main img{
 
 main .main_text{
   text-align: left;
+  height: 120px;
+  line-height: 1.8;
+}
+
+footer{
+  text-align: center;
+  background-color: #fff;
+  padding: 64px 0;
+  width: 400px;
+  margin:auto;
+  border-style: solid;
+}
+
+footer p{
+  color:#999;
+  font-size: 16px;
+  line-height: 1.8;
+  border-style: solid black 5px ;
+}
+
+footer img{
+  width: 24px;
+  height: 24px;
+  margin-top:8px;
 }
