--- a/MyOmikuji/style.css
+++ b/MyOmikuji/style.css
@@ -32,4 +32,10 @@ button{
     color: #fff;
     border-radius: 8px;
     padding: 8px 0;
+    cursor: pointer;
+    box-shadow: 0 4px #7a0000;
+}
+
+button:hover{
+    opacity: .8;
 }
