--- a/MyWalkingApp/style.css
+++ b/MyWalkingApp/style.css
@@ -1,5 +1,108 @@
 @charset "utf-8";
 
+/* common place */
+
+*{
+  font-weight: normal;
+  margin: 0;
+}
+
 body {
   background: pink;
+  margin: 0;
+}
+
+.btn {
+  border-radius: 8px;
+  padding:8px 16px;
+  color: #fff;
+  background-color: green;
+  text-decoration: none;
+  display: inline-block;
+}
+
+
+img{
+  vertical-align: bottom;
+  display: inline-block;
+}
+
+h2{
+  margin: 0;
+}
+
+p {
+  margin:0;
+}
+
+/* header area */
+
+header{
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+
+h1{
+  margin: 0;
+  line-height: 0;
+}
+
+/* main hero area */
+.hero{
+  background-color: lightskyblue;
+  background-image: url(bg.png);
+  background-repeat: repeat-x;
+  background-position: center bottom;
+  text-align: center;
+}
+
+.hero div{
+  padding: 64px 0;
+}
+
+.hero div a{
+  margin-top: 64px;
+}
+
+/* section2 */
+
+.main2:not(.sentence){
+  background-color: #fff;
+  padding: 64px 16px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.feature{
+  margin-top: 64px;
+}
+
+h3{
+  margin-top: 16px;
+}
+
+p{
+  margin-top: 16px;
+}
+
+/* footer */
+footer{
+  margin:0 auto;
+  background-color: #222;
+  color:#fff;
+  padding: 64px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0.9;
+}
+
+small{
+  font-size: 14px;
 }
