--- a/MyModalWindow/style.css
+++ b/MyModalWindow/style.css
@@ -5,8 +5,7 @@ body {
     font-size: 14px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+ 
 }
 
 #open, #close {
@@ -18,4 +17,30 @@ body {
     margin:16px auto 0;
     text-align: center;
 
+}
+
+#mask {
+    background: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    
+}
+
+#modal {
+    background: #fff;
+    width: 300px;
+    padding: 20px;
+    border-radius: 4px;
+    position:absolute;
+    top: 40px;
+    left: 0;
+    right: 0;
+    margin: 0 auto
+}
+
+#modal > p {
+    margin: 0 0 20px;
 }
