--- a/cv-app/src/styles/01_ProfileForm.css
+++ b/cv-app/src/styles/01_ProfileForm.css
@@ -1,3 +1,40 @@
-.Profile h2 {
 
+.form {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #aaa;
+    box-shadow: #aaa;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.Profile {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="file"] {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+@media (max-width: 600px) {
+    .form{
+        width: 90%;
+    }
 }
