--- a/cv-app/src/styles/App.css
+++ b/cv-app/src/styles/App.css
@@ -2,4 +2,10 @@
   background-color: black;
   color: white;
   font-family: Arial, sans-serif;
+  
+}
+
+h1 {
+  text-align: center;
+  width: 500px;
 }
