--- a/cv-app/src/styles/01_ProfileForm.css
+++ b/cv-app/src/styles/01_ProfileForm.css
@@ -3,12 +3,12 @@
     display: flex;
     flex-direction: column;
     max-width: 500px;
-    margin: 20px auto;
-    padding: 20px;
+    margin: 24px auto;
+    padding: 24px;
     border: 1px solid #aaa;
 
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        background: linear-gradient(to bottom,#11111111, #f7f7f7);
+        background: white;
     
 
     border-radius: 4px;
@@ -24,24 +24,43 @@
 .input {
     width: 100%;
     padding: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 16px;
     border: 1px solid linear-gradient(to bottom,#11111111, #f7f7f7);
     border-radius: 4px;
     box-sizing: border-box;
 }
 
-input[type="file"] {
-    margin-top: 10px;
+.label-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
     border: 1px solid linear-gradient(to bottom,#11111111, #f7f7f7);
     border-radius: 4px;
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
+
+    padding: 8px;
+    margin-bottom: 16px;
     box-sizing: border-box;
+  }
+  
+
+.label-text{
+    
 }
+
+profile-input{
+    
+}
+
+input[type="file"] {
+    margin-top: 0;
+    
+  }
 
 @media (max-width: 600px) {
     .form{
         width: 90%;
     }
 }
+
+/* Undergoing, need to fix Profile Image position from inside input file to outside */
