--- a/cv-app/src/styles/01_ProfileForm.css
+++ b/cv-app/src/styles/01_ProfileForm.css
@@ -8,7 +8,7 @@
     border: 1px solid #aaa;
 
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        background: white;
+        background: #EFEFEF;
     
 
     border-radius: 4px;
