--- a/cv-app/src/styles/01_ProfileForm.css
+++ b/cv-app/src/styles/01_ProfileForm.css
@@ -2,7 +2,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    max-width: 500px;
+    width: 100%;
     margin: 24px auto;
     padding: 24px;
     border: 1px solid #aaa;
