--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -13,6 +13,32 @@
   background-color: #84DCCF;
 }
 
+.todo-item.completed {
+  text-decoration: line-through;
+  color: rgba(255, 255, 255, 0.5);
+  opacity: 0.4;
+}
+
+
+.input-container {
+  position: relative;
+}
+
+.icon-placeholder {
+  position: absolute;
+  left: 10px; /* アイコンの位置調整 */
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #aaa; /* アイコンの色 */
+}
+
+input {
+  padding-left: 30px; /* アイコンのスペースを確保 */
+}
+
+
+
 .priority-indicator {
   width: 24px;
   height: 24px;
@@ -54,17 +80,12 @@
   color: rgba(255, 255, 255, 0.7);
 }
 
-.todo-item.completed {
-  text-decoration: line-through;
-  color: rgba(255, 255, 255, 0.5);
-  opacity: 0.4;
-}
-
 
 .action-buttons {
   display: flex;
   justify-content: flex-start;
 }
+
 
 
 
@@ -141,8 +162,6 @@ input[type="text"]:hover {
 }
 
 
-
-
 .action-buttons button {
   background: none;
   border: none;
@@ -157,6 +176,11 @@ input[type="text"]:hover {
   transform: scale(1.2);
 }
 
+/* ホバー時にアイコンを変更 */
+button:hover .fa-circle {
+  content: "\f058"; /* fa-check-circleのコードポイント */
+}
+
 .hover {
   border: 2px solid transparent;  /* 透明なボーダーを追加 */
   transition: transform 0.3s ease, border-color 0.3s ease;  /* トランジションを追加 */
@@ -166,7 +190,6 @@ input[type="text"]:hover {
   transform: translateY(-2px);
   border: 2px solid white;
 }
-
 
 
 .filters {
