--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -7,9 +7,18 @@ body {
   color: #20272D;
 }
 
+.task-input, .todo-item, .expanded-options {
+  width: 100%;
+  box-sizing: border-box;
+}
+/* 全幅を統一 */
+
 
 .todo-app {
-
+  margin: 0 auto;
+  height: 100vh;
+  overflow-y: auto;
+  padding: 20px;
   /* 全体のコンテナに固定の高さを設定し、
   内部をスクロール可能にすることで、
   新しい要素が追加されても全体のレイアウトが
@@ -133,7 +142,6 @@ input[type="text"] {
   border: none;
   border-radius: 25px;
   flex-grow: 1;
-  margin-right: 16px;
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
 }
@@ -148,6 +156,7 @@ input[type="text"]:hover {
   outline: none; /* デフォルトのアウトラインを消す場合 */
 }
 
+/* Add */
 .add-button {
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
@@ -168,14 +177,41 @@ input[type="text"]:hover {
   color: inherit; /* ボタンの色を引き継ぐ */
   font-size: 30px; 
 }
+/* Add 末尾*/
+
 /* 入力フォーム末尾 */
 
 
 
 /* 隠れメニュー */
-.expanded{
-  display: inline-block;
+
+input[type="text"]:focus-within {
+  border-radius: 25px 25px 0 0;
 }
+
+.expanded-options, .todo-item{
+  width: 100%;
+
+
+.input-container {
+  border-radius: 25px;
+  transition: border-radius 0.3s ease;
+}
+
+.input-container.expanded {
+  border-radius: 25px 25px 0 0;
+}}
+
+.expanded-options{
+  /* width: 100%;
+  box-sizing: border-box; */
+  border-radius: 0 0 25px 25px;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(255, 255, 255, 0.2)
+}
+
 
 
 .expanded-options.show {
